<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="first_player_text">First Player</string>
    <string name="second_player_text">Second Player</string>
    <string name="go_button_title">Go</string>
    <string name="first_player_name_error">Please type a valid name for the first player</string>
    <string name="second_player_name_error">Please type a valid name for the second player</string>
    <string name="same_players_names_error">Players names cannot be the same</string>
    <string name="game_turn">\'s turn!</string>
    <string name="exit_button_title">Exit</string>
    <string name="play_again_button_title">Play Again!</string>
    <string name="leader_board_title">Leaderboard</string>
    <string name="play_again_dialog_message">Play again with the same players ?</string>
    <string name="option_yes">Yes</string>
    <string name="option_no">No</string>
    <string name="winner_is">"Winner is "</string>
    <string name="execlamation_marks">!!</string>
    <string name="game_is_draw">Game is Draw !!</string>
</resources>
