<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:src="@drawable/icon_cup"/>

        <TextView
            android:id="@+id/leader_board_title"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/leader_board_title"
            android:textColor="@android:color/white"
            android:textSize="15sp"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/leader_board_recycler_height"
        android:layout_below="@+id/header_layout"/>

    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/recyclerView"
        android:layout_centerVertical="true"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/exit_game_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/blue_rounded_background"
            android:text="@string/exit_button_title"
            android:textAllCaps="false"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/play_again_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/blue_rounded_background"
            android:text="@string/play_again_button_title"
            android:textAllCaps="false"
            android:textColor="@android:color/white"/>
    </LinearLayout>
</RelativeLayout>